--- a/src/app/core/nav-menu/components/menu-header/menu-header.component.html
+++ b/src/app/core/nav-menu/components/menu-header/menu-header.component.html
@@ -1,5 +1,5 @@
 <div class="menu-header">
-  <button mat-icon-button (click)="buttonClicked.emit(true)">
+  <button mat-icon-button (click)="onButtonClicked()">
     <mat-icon class="mdi-menu"></mat-icon>
   </button>
 
