fix volume resize

--- a/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
+++ b/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
@@ -18,6 +18,7 @@
         [storageAvailable]="storageAvailable"
         [diskOfferings]="diskOfferings"
         [diskOffering]="diskOffering"
+        (changeSize)="updateSize($event)"
         (change)="updateDiskOffering($event)"
       ></cs-disk-offering-selector>
     </div>
