--- a/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
@@ -22,6 +22,7 @@
   [min]="min"
   [max]="max"
   [label]="'VM_PAGE.STORAGE_DETAILS.VOLUME_RESIZE.NEW_SIZE' | translate"
-  [(ngModel)]="newSize"
+  [ngModel]="newSize"
+  (ngModelChange)="changeSize.next($event)"
   [units]="'UNITS.GB' | translate"
 ></cs-slider>
