fix bugs after testing

--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
@@ -1,43 +1,46 @@
-<ng-container *ngIf="affinityGroups?.length">
-  <div class="mat-dialog-content">
-    <table mat-table [dataSource]="affinityGroups">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.NAME' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
-          <span [innerHTML]="element.name"></span>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.TYPE' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
-          <span>{{ element.type | affinityGroupType }}</span>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.DESCRIPTION' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
-          <span>{{ element.description }}</span>
-        </td>
-      </ng-container>
-      <ng-container class="mat-column-radioButton" matColumnDef="radioButton">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
-          <mat-radio-button
-            name="service-offering"
-            [value]="element"
-            [disabled]="isDisabledAffinityGroup(element.id)"
-            [checked]="isSelectedAffinityGroup(element)"
-            (click)="selectAffinityGroup(element.id)"
-          ></mat-radio-button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row
-          *matRowDef="let row; columns: displayedColumns;"
-          (click)="selectGroupChange(row)"
-      ></tr>
-    </table>
-  </div>
-</ng-container>
+<div class="mat-dialog-content" *ngIf="affinityGroups?.length">
+  <table mat-table [dataSource]="affinityGroups">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.NAME' | translate }}</th>
+      <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
+        <span
+          *ngIf="element.description; else noDescription"
+          [innerHTML]="element.name"
+          [matTooltip]="element.description">
+        </span>
+        <ng-template #noDescription>
+          <span>{{ element.name }}</span>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef>{{ 'AFFINITY_GROUP.TYPE' | translate }}</th>
+      <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
+        <span>{{ element.type | affinityGroupType }}</span>
+      </td>
+    </ng-container>
+
+    <ng-container class="mat-column-radioButton" matColumnDef="radioButton">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
+        <mat-radio-button
+          *ngIf="!isDisabledAffinityGroup(element.id)"
+          name="service-offering"
+          [value]="element"
+          [checked]="isSelectedAffinityGroup(element)"
+          (click)="selectAffinityGroup(element)"
+        ></mat-radio-button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row
+        *matRowDef="let row; columns: displayedColumns;"
+        (click)="selectAffinityGroup(row)"
+    ></tr>
+
+  </table>
+</div>
 
 <cs-no-results *ngIf="!affinityGroups?.length"></cs-no-results>
