--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.scss
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.scss
@@ -7,3 +7,7 @@ form {
   justify-content: space-between;
   align-items: center;
 }
+
+mat-card-header /deep/ .mat-card-header-text {
+  margin: 0 !important;
+}
