--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -158,7 +158,7 @@
                 <div>
                   <cs-vm-creation-affinity-group-manager
                     [affinityGroup]="vmCreationState.affinityGroup"
-                    (onAffinityGroupChange)="changeAffinityGroup($event)"
+                    (affinityGroupChanged)="changeAffinityGroup($event)"
                   ></cs-vm-creation-affinity-group-manager>
                 </div>
 
