--- a/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.scss
+++ b/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '../../../style/_variables';
+
 .service-offering-selector {
   padding-top: 10px;
   display: block;
@@ -22,6 +24,6 @@
 }
 
 .error-message {
-  color: #f44336;
+  color: $error-message-color;
   font-size: 13px;
 }
