--- a/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
+++ b/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
@@ -11,15 +11,15 @@
     <div class="mat-dialog-content">
       <cs-disk-offering-selector
         name="diskOffering"
-        [isShowSelector]="!volumeIsRoot && diskOfferings?.length"
-        [isShowSlider]="isCustomizedForVolume(diskOffering) || volumeIsRoot"
+        [enableSelector]="!volumeIsRoot && diskOfferings?.length"
+        [enableSlider]="isCustomizedForVolume(diskOffering) || volumeIsRoot"
         [min]="volume.size | division:2:30"
         [newSize]="newSize"
-        [storageAvailable]="storageAvailable"
+        [availableStorage]="availableStorage"
         [diskOfferings]="diskOfferings"
         [diskOffering]="diskOffering"
-        (changeSize)="updateSize($event)"
-        (change)="updateDiskOffering($event)"
+        (changedSize)="updateSize($event)"
+        (changed)="updateDiskOffering($event)"
       ></cs-disk-offering-selector>
     </div>
     <div class="mat-dialog-actions">
