--- a/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.scss
+++ b/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../style/_variables';
+
 .service-offering-info {
   display: inline-block;
   width: 100%;
@@ -20,6 +22,6 @@
 }
 
 .error-message {
-  color: #f44336;
+  color: $error-message-color;
   font-size: 10pt;
 }
