changes in Vm creation show name and type show option "noGroup" in a affinity list

--- a/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.html
+++ b/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.html
@@ -10,7 +10,9 @@
   </button>
   <span class="fancy-select-content">
     <div class="mat-form-field-wrapper template-list">
-      <span *ngIf="affinityGroup; else noAffinityGroup" class="ellipsis-overflow">{{ affinityGroup.name }}</span>
+      <ng-container *ngIf="affinityGroup; else noAffinityGroup">
+        <span class="name-container"><span class="ellipsis-overflow">{{ affinityGroup.name }} </span>: {{ affinityGroup.type }}</span>
+      </ng-container>
       <ng-template #noAffinityGroup>
         {{ 'COMMON.NONE' | translate }}
       </ng-template>
