--- a/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.scss
+++ b/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.scss
@@ -6,8 +6,13 @@
 
 .ellipsis-overflow {
   display: inline-block;
-  width: 100%;
+  max-width: 150px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.name-container {
+  display: flex;
+  justify-content: start;
 }
