--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
@@ -1,15 +1,18 @@
-<div class="mat-dialog-content" *ngIf="affinityGroups?.length">
+<div class="mat-dialog-content" *ngIf="affinityGroups">
   <table mat-table [dataSource]="affinityGroups">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.NAME' | translate }}</th>
       <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
         <span
           *ngIf="element.description; else noDescription"
-          [innerHTML]="element.name"
           [matTooltip]="element.description">
+          {{ element.name }}
         </span>
         <ng-template #noDescription>
-          <span>{{ element.name }}</span>
+          <span *ngIf="element.name !== emptyAffinityGroup; else noGroup">{{ element.name }}</span>
+          <ng-template #noGroup>
+            {{ 'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.NO_AFFINITY_GROUP' | translate }}
+          </ng-template>
         </ng-template>
       </td>
     </ng-container>
@@ -17,7 +20,7 @@
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>{{ 'AFFINITY_GROUP.TYPE' | translate }}</th>
       <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
-        <span>{{ element.type | affinityGroupType }}</span>
+        <span>{{ element.type | csAffinityGroupType }}</span>
       </td>
     </ng-container>
 
