--- a/src/app/vm/vm-sidebar/vm-detail/affinity-group/affinity-group.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/affinity-group/affinity-group.component.html
@@ -25,7 +25,7 @@
           </button>
         </div>
         <span class="value">
-          {{ getAffinityGroupType(affinityGroup.id) }}
+          {{ affinityGroup.type | csAffinityGroupType}}
         </span>
       </div>
       <div *ngIf="!vm.affinitygroup.length">
