fix(dialogs): fix vm creation and volume creation dialogs

--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
@@ -12,11 +12,12 @@
         <mat-expansion-panel-header>
           <mat-panel-title>
             <mat-radio-button
-            [value]="offering"
-            [checked]="offering.id === selectedDiskOffering?.id"
-            (click)="selectOffering(offering); preventTriggerExpansionPanel($event)"
-            ></mat-radio-button>
-            {{ offering.name }}
+              [value]="offering"
+              [checked]="offering.id === selectedDiskOffering?.id"
+              (click)="selectOffering(offering); preventTriggerExpansionPanel($event)"
+            >
+              {{ offering.name }}
+            </mat-radio-button>
           </mat-panel-title>
           <mat-panel-description>
             <div
