rename translation keys

--- a/src/app/template/template-creation/template-creation.component.html
+++ b/src/app/template/template-creation/template-creation.component.html
@@ -135,8 +135,8 @@
 
     <div>
       <button mat-button type="button" (click)="showAdditional=!showAdditional">
-        {{ (showAdditional ? 'TEMPLATE_PAGE.TEMPLATE_CREATION.HIDE_ADDITIONAL'
-        : 'TEMPLATE_PAGE.TEMPLATE_CREATION.SHOW_ADDITIONAL') | translate }}
+        {{ (showAdditional ? 'TEMPLATE_PAGE.TEMPLATE_CREATION.HIDE_DETAILS'
+        : 'TEMPLATE_PAGE.TEMPLATE_CREATION.SHOW_DETAILS') | translate }}
       </button>
     </div>
 
