--- a/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
+++ b/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
@@ -35,8 +35,8 @@
   <div class="mat-dialog-actions">
     <div>
       <button mat-button color="primary" (click)="showFields = !showFields">
-        {{ (showFields ? 'SERVICE_OFFERING.HIDE_ADDITIONAL_FIELDS'
-        : 'SERVICE_OFFERING.SHOW_ADDITIONAL_FIELDS' )| translate }}
+        {{ (showFields ? 'SERVICE_OFFERING.HIDE_DETAILS'
+        : 'SERVICE_OFFERING.SHOW_DETAILS' )| translate }}
       </button>
     </div>
     <div>
