--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.scss
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.scss
@@ -1,11 +1,16 @@
 table {
   width: 100%;
 
+  .name-column {
+    max-width: 230px;
+    min-width: 230px;
+  }
+
   td {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 100px;
+    max-width: 230px;
     padding-right: 10px;
   }
 }
@@ -14,7 +19,8 @@ tbody:hover {
   background-color: #eee;
 }
 
-th, td {
+th,
+td {
   &.mat-column-radioButton {
     min-width: 70px;
     max-width: 70px;
