fix pattern disable submit btn only if affinity group list is empty

--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
@@ -77,7 +77,7 @@
     mat-button
     type="button"
     color="primary"
-    [disabled]="!selectedGroup"
+    [disabled]="affinityGroups.length === 1"
     (click)="submit()"
   >
     {{ 'COMMON.SELECT' | translate }}
