--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div
-                  *ngIf="vmCreationState.zone && serviceOfferings?.length"
+                  *ngIf="vmCreationState.zone"
                   class="dialog-select-wrapper"
                 >
                   <cs-service-offering-selector
