--- a/src/app/vm-logs/vm-logs/vm-logs.component.scss
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.scss
@@ -1,7 +1,7 @@
 @import '../../../style/_variables';
 
 .fab {
-  transition: margin .4s cubic-bezier(.25,.8,.25,1);
+  transition: margin 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   position: fixed;
   right: 32px;
   bottom: 32px;
