fix bugs after testing

--- a/src/app/volume/volume-creation/volume-creation-dialog.component.html
+++ b/src/app/volume/volume-creation/volume-creation-dialog.component.html
@@ -47,7 +47,7 @@
         [diskOfferings]="diskOfferings"
         [account]="account"
         [diskOffering]="diskOffering"
-        (change)="updateDiskOffering($event)"
+        (changed)="updateDiskOffering($event)"
       ></cs-disk-offering-selector>
     </div>
     <div class="mat-dialog-actions">
