--- a/src/app/shared/components/day-period/day-period.component.html
+++ b/src/app/shared/components/day-period/day-period.component.html
@@ -1,5 +1,9 @@
 <mat-form-field *ngIf="periods">
-  <mat-select name="period" [(ngModel)]="period">
+  <mat-select
+    name="period"
+    [disabled]="disabled"
+    [(ngModel)]="period"
+  >
     <mat-option *ngFor="let p of periods" [value]="p.value">
       {{ p.name | translate }}
     </mat-option>
