--- a/src/app/shared/components/time-picker/time-picker.component.html
+++ b/src/app/shared/components/time-picker/time-picker.component.html
@@ -3,6 +3,7 @@
     matInput
     name="hour"
     type="number"
+    [disabled]="disabled"
     [min]="minHourValue"
     [max]="maxHourValue"
     [csMinValue]="minHourValue"
@@ -21,6 +22,7 @@
     matInput
     name="minute"
     type="number"
+    [disabled]="disabled"
     [min]="minMinuteValue"
     [max]="maxMinuteValue"
     [csMinValue]="minMinuteValue"
