--- a/src/app/account/account-page/account-page.component.scss
+++ b/src/app/account/account-page/account-page.component.scss
@@ -4,7 +4,7 @@
   display: block;
   height: 100%;
   position: relative;
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
   overflow: hidden;
@@ -12,10 +12,6 @@
 
 mat-sidenav-container {
   height: 100%;
-}
-
-cs-sidebar, mat-sidenav {
-  width: $sidebar-width + 1;
 }
 
 .detail-list {
