--- a/src/app/volume/volume-filter/volume-filter.component.html
+++ b/src/app/volume/volume-filter/volume-filter.component.html
@@ -1,4 +1,5 @@
-<div class="options-panel filter-wrapper">
+<div class="filter-wrapper"
+     [style.margin-right.px]="marginRight">
   <mat-checkbox
     name="volumeOnly"
     [(ngModel)]="spareOnly"
