--- a/src/style/__variables.scss
+++ b/src/style/__variables.scss
@@ -1,3 +1,4 @@
 $nav-menu-min-width: 250px;
-$sidebar-width: 330px;
 $sidebar-card-line-height: 22px;
+$sidebar-min-width: 330px;
+$sidebar-max-width: 660px;
