--- a/src/app/account/account-list-filter/account-list-filter.component.html
+++ b/src/app/account/account-list-filter/account-list-filter.component.html
@@ -1,4 +1,4 @@
-<div class="options-panel filter-wrapper">
+<div class="filter-wrapper" [style.margin-right.px]="marginRight">
   <mat-form-field>
     <mat-select
       multiple="true"
