--- a/src/app/shared/components/fab/fab.component.scss
+++ b/src/app/shared/components/fab/fab.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../style/__variables';
 
 .fab {
-  transition: margin .4s cubic-bezier(.25,.8,.25,1);
+  transition: margin 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
   position: fixed;
   right: 32px;
   bottom: 32px;
@@ -26,8 +26,4 @@
 
 /deep/ .mat-mini-fab .mat-button-wrapper {
   padding: 7px 0 !important;
-}
-
-:host.open .fab {
-  margin-right: $sidebar-width;
 }
