--- a/src/app/shared/components/top-bar/top-bar.component.scss
+++ b/src/app/shared/components/top-bar/top-bar.component.scss
@@ -20,7 +20,12 @@
   transition: right 300ms;
 }
 
+.drawer-button {
+  height: 20px;
+  padding: 20px 0 20px 20px;
+  cursor: pointer;
+}
+
 .sidebar-open {
-  right: $sidebar-width;
   z-index: 6;
 }
